infra/k8s/img-proc-mcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: img-proc-mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: img-proc-mcp
  template:
    metadata:
      labels:
        app: img-proc-mcp
    spec:
      containers:
        - name: img-proc-mcp
          image: docker.io/ahmadray98/polyai-fursa-img-proc-mcp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: img-proc-mcp-svc
spec:
  type: ClusterIP
  selector:
    app: img-proc-mcp
  ports:
    - port: 9000
      targetPort: 9000
